[package]
name = "ssv"
version = "0.1.0"
edition = "2021"
description = "SSV means Space-Separated Values, and is an alternative to CSV."
authors = ["Eduardo R. D'Avila <erdavila@gmail.com>"]
repository = "https://github.com/erdavila/ssv-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
